k8s.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gotham-project
spec:
  revisionHistoryLimit: 1
  replicas: 1
  template:
    metadata:
      labels:
        app: gotham-project
    spec:
      containers:
      - name: frontend
        image: gcr.io/gotham-254312/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 70m
          requests:
            cpu: 70m
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: gotham-project
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gotham-project
spec:
  revisionHistoryLimit: 1
  replicas: 1
  template:
    metadata:
      labels:
        app: gotham-project
    spec:
      containers:
      - name: backend
        image: gcr.io/gotham-254312/backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
  selector:
    app: gotham-project
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gotham-project
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
  - hosts:
    - gotham-254312.appspot.com
    secretName: gotham-ingress-tls
  rules:
  - host: gotham-254312
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
      - path: /api
        backend:
          serviceName: backend
          servicePort: 4000
